parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 21    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> SPINNY TEXT NUMBER NUMBER
Rule 28    command -> STACKY TEXT NUMBER NUMBER NUMBER TEXT NUMBER
Rule 29    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 32    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 34    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 36    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 37    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 38    command -> MOVE NUMBER NUMBER NUMBER
Rule 39    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 40    command -> SCALE NUMBER NUMBER NUMBER
Rule 41    command -> ROTATE XYZ NUMBER SYMBOL
Rule 42    command -> ROTATE XYZ NUMBER
Rule 43    command -> FRAMES NUMBER
Rule 44    command -> BASENAME TEXT
Rule 45    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 46    command -> SET SYMBOL NUMBER
Rule 47    command -> SET_KNOBS NUMBER
Rule 48    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 49    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 50    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 51    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 52    command -> SHADING SHADING_TYPE
Rule 53    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 54    command -> GENERATE_RAYFILES
Rule 55    command -> MESH CO TEXT
Rule 56    command -> MESH SYMBOL CO TEXT
Rule 57    command -> MESH CO TEXT SYMBOL
Rule 58    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 59    command -> SAVE_KNOBS SYMBOL
Rule 60    command -> SAVE_COORDS SYMBOL
Rule 61    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 62    command -> FOCAL NUMBER
Rule 63    command -> WEB
Rule 64    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 48
BASENAME             : 44
BOX                  : 23 24 25 26
CAMERA               : 53
CO                   : 55 56 57 58
COMMENT              : 3
CONSTANTS            : 49 50
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 62
FRAMES               : 43
GENERATE_RAYFILES    : 54
ID                   : 5
INT                  : 
LIGHT                : 51
LINE                 : 29 30 31 32 33 34 35 36
MESH                 : 55 56 57 58
MOVE                 : 37 38
POP                  : 9
PUSH                 : 10
ROTATE               : 41 42
SAVE                 : 13
SAVE_COORDS          : 60
SAVE_KNOBS           : 59
SCALE                : 39 40
SCREEN               : 11 12
SET                  : 46
SET_KNOBS            : 47
SHADING              : 52
SHADING_TYPE         : 52
SPHERE               : 15 16 17 18
SPINNY               : 27
STACKY               : 28
STRING               : 7
TEXTURE              : 64
TORUS                : 19 20 21 22
TWEEN                : 61
VARY                 : 45
WEB                  : 63
XYZ                  : 4 41 42
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 27 27 28 28 28 28 29 29 29 29 29 29 30 30 30 30 30 30 31 31 31 31 31 31 32 32 32 32 32 32 33 33 33 33 33 33 34 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 38 38 38 39 39 39 40 40 40 41 42 43 45 45 45 45 46 47 48 48 48 49 49 49 49 49 49 49 49 49 50 50 50 50 50 50 50 50 50 50 50 50 51 51 51 51 51 51 53 53 53 53 53 53 61 61 62 64 64 64 64 64 64 64 64 64 64 64 64
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 30 31 32 32 33 34 34 35 35 36 36 36 37 39 41 45 46 49 50 51 56 57 58 58 59 60 61 61 64
TEXT                 : 13 13 27 28 28 44 55 56 57 58
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . SPINNY TEXT NUMBER NUMBER
    (28) command -> . STACKY TEXT NUMBER NUMBER NUMBER TEXT NUMBER
    (29) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (32) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (36) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . MOVE NUMBER NUMBER NUMBER
    (39) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (40) command -> . SCALE NUMBER NUMBER NUMBER
    (41) command -> . ROTATE XYZ NUMBER SYMBOL
    (42) command -> . ROTATE XYZ NUMBER
    (43) command -> . FRAMES NUMBER
    (44) command -> . BASENAME TEXT
    (45) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (46) command -> . SET SYMBOL NUMBER
    (47) command -> . SET_KNOBS NUMBER
    (48) command -> . AMBIENT NUMBER NUMBER NUMBER
    (49) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (50) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (51) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (52) command -> . SHADING SHADING_TYPE
    (53) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (54) command -> . GENERATE_RAYFILES
    (55) command -> . MESH CO TEXT
    (56) command -> . MESH SYMBOL CO TEXT
    (57) command -> . MESH CO TEXT SYMBOL
    (58) command -> . MESH SYMBOL CO TEXT SYMBOL
    (59) command -> . SAVE_KNOBS SYMBOL
    (60) command -> . SAVE_COORDS SYMBOL
    (61) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (62) command -> . FOCAL NUMBER
    (63) command -> . WEB
    (64) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 13
    POP             shift and go to state 15
    PUSH            shift and go to state 18
    SCREEN          shift and go to state 23
    SAVE            shift and go to state 34
    DISPLAY         shift and go to state 11
    SPHERE          shift and go to state 26
    TORUS           shift and go to state 20
    BOX             shift and go to state 1
    SPINNY          shift and go to state 6
    STACKY          shift and go to state 32
    LINE            shift and go to state 10
    MOVE            shift and go to state 4
    SCALE           shift and go to state 3
    ROTATE          shift and go to state 29
    FRAMES          shift and go to state 9
    BASENAME        shift and go to state 12
    VARY            shift and go to state 5
    SET             shift and go to state 14
    SET_KNOBS       shift and go to state 30
    AMBIENT         shift and go to state 24
    CONSTANTS       shift and go to state 35
    LIGHT           shift and go to state 17
    SHADING         shift and go to state 28
    CAMERA          shift and go to state 16
    GENERATE_RAYFILES shift and go to state 2
    MESH            shift and go to state 27
    SAVE_KNOBS      shift and go to state 33
    SAVE_COORDS     shift and go to state 8
    TWEEN           shift and go to state 25
    FOCAL           shift and go to state 21
    WEB             shift and go to state 22
    TEXTURE         shift and go to state 7

    input                          shift and go to state 19
    command                        shift and go to state 31

state 1

    (23) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 37
    NUMBER                         shift and go to state 38

state 2

    (54) command -> GENERATE_RAYFILES .

    COMMENT         reduce using rule 54 (command -> GENERATE_RAYFILES .)
    POP             reduce using rule 54 (command -> GENERATE_RAYFILES .)
    PUSH            reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SCREEN          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SAVE            reduce using rule 54 (command -> GENERATE_RAYFILES .)
    DISPLAY         reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SPHERE          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    TORUS           reduce using rule 54 (command -> GENERATE_RAYFILES .)
    BOX             reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SPINNY          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    STACKY          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    LINE            reduce using rule 54 (command -> GENERATE_RAYFILES .)
    MOVE            reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SCALE           reduce using rule 54 (command -> GENERATE_RAYFILES .)
    ROTATE          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    FRAMES          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    BASENAME        reduce using rule 54 (command -> GENERATE_RAYFILES .)
    VARY            reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SET             reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SET_KNOBS       reduce using rule 54 (command -> GENERATE_RAYFILES .)
    AMBIENT         reduce using rule 54 (command -> GENERATE_RAYFILES .)
    CONSTANTS       reduce using rule 54 (command -> GENERATE_RAYFILES .)
    LIGHT           reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SHADING         reduce using rule 54 (command -> GENERATE_RAYFILES .)
    CAMERA          reduce using rule 54 (command -> GENERATE_RAYFILES .)
    GENERATE_RAYFILES reduce using rule 54 (command -> GENERATE_RAYFILES .)
    MESH            reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SAVE_KNOBS      reduce using rule 54 (command -> GENERATE_RAYFILES .)
    SAVE_COORDS     reduce using rule 54 (command -> GENERATE_RAYFILES .)
    TWEEN           reduce using rule 54 (command -> GENERATE_RAYFILES .)
    FOCAL           reduce using rule 54 (command -> GENERATE_RAYFILES .)
    WEB             reduce using rule 54 (command -> GENERATE_RAYFILES .)
    TEXTURE         reduce using rule 54 (command -> GENERATE_RAYFILES .)
    $end            reduce using rule 54 (command -> GENERATE_RAYFILES .)


state 3

    (39) command -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (40) command -> SCALE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 41

state 4

    (37) command -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (38) command -> MOVE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 42

state 5

    (45) command -> VARY . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 43

state 6

    (27) command -> SPINNY . TEXT NUMBER NUMBER
    (6) TEXT -> . SYMBOL
    (7) TEXT -> . STRING
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    STRING          shift and go to state 44
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    TEXT                           shift and go to state 45
    SYMBOL                         shift and go to state 46

state 7

    (64) command -> TEXTURE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 47

state 8

    (60) command -> SAVE_COORDS . SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 48

state 9

    (43) command -> FRAMES . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 49

state 10
